--- a/MetarReceiver/MainWindow.xaml
+++ b/MetarReceiver/MainWindow.xaml
@@ -12,8 +12,8 @@
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0"
-                BorderBrush="Black" BorderThickness="0 0 0 1"/>
+        <Border Grid.Row="1"
+                Background="LightGray"/>
         
         <StackPanel Grid.Row="0"
                     Orientation="Vertical"
